objects/User.object
<CustomObject>
    <fields>
        <fullName>User_Profile_Name__c</fullName>
        <formula>OR (CONTAINS(&quot;TZ&quot;, LEFT(Profile.Name,2)) , CONTAINS(&quot;GT&quot;, LEFT(Profile.Name,2)), CONTAINS(&quot;Partner&quot;, LEFT(Profile.Name,7)), CONTAINS(&quot;Chatter&quot;, LEFT(Profile.Name,7)), CONTAINS(&quot;Customer&quot;, LEFT(Profile.Name,8)), CONTAINS(&quot;BizBox&quot;, LEFT(Profile.Name,6)), CONTAINS(&quot;Business&quot;, LEFT(Profile.Name,8)), CONTAINS(&quot;GPO&quot;, LEFT(Profile.Name,3)), CONTAINS(&quot;Operations&quot;, LEFT(Profile.Name,10)), CONTAINS(&quot;ACE&quot;, LEFT(Profile.Name,3)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_ID__c</fullName>
        <formula>IF(ISPICKVAL(Manager.Job_Code_Level__c, &quot;VP&quot;), ManagerId,
IF(ISPICKVAL(Manager.Manager.Job_Code_Level__c, &quot;VP&quot;), Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Job_Code_Level__c, &quot;VP&quot;), Manager.Manager.ManagerId,
IF(ISPICKVAL(Manager.Manager.Manager.Manager.Job_Code_Level__c, &quot;VP&quot;), Manager.Manager.Manager.ManagerId,
&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_1_Login__c</fullName>
        <description>If User logged in after 1st week of training</description>
        <label>Week 1 Login</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_2_Login__c</fullName>
        <description>If User logged in after 2nd week of training</description>
        <label>Week 2 Login</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_3_Login__c</fullName>
        <description>If User logged in after 3rd week of training</description>
        <label>Week 3 Login</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Appointment_Monthly_Goal__c</fullName>
        <label>1st Appointment Monthly Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Product_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Product Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Scrum_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Scrum Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Team User</fullName>
                </value>
                <value>
                    <fullName>API User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bread &amp; Butter</fullName>
                </value>
                <value>
                    <fullName>Meat &amp; Potatoes</fullName>
                    <default>true</default>
                    <label>Meat &amp; Potatoes</label>
                </value>
                <value>
                    <fullName>The Whole Enchilada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Owner_Certified_Date__c</fullName>
        <label>Product Owner Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Master_Certified_Date__c</fullName>
        <label>Scrum Master Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Preference__c</fullName>
        <label>User Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Next Generation</fullName>
                    <default>true</default>
                    <label>Next Generation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__CanManageAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can manage DocuSign account</description>
        <label>Can manage DocuSign account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Username__c</fullName>
        <description>DocuSign username</description>
        <label>DocuSign username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_ext__c</fullName>
        <externalId>true</externalId>
        <label>email ext</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRoleChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRoleChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jira_User__c</fullName>
        <externalId>true</externalId>
        <label>jira User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>profileid__c</fullName>
        <formula>ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>profileid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>roleid__c</fullName>
        <formula>UserRoleId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>roleid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>uid</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>Short_Title__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Admin_Accounts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUserswithEmpID</fullName>
        <columns>FULL_NAME</columns>
        <columns>Region__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Short_Title__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AllUserswithEmpID</label>
    </listViews>
    <listViews>
        <fullName>FieldSales</fullName>
        <columns>CORE.USERS.PHONE</columns>
        <columns>ISO_Extension__c</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Field Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Field Sales</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>Inside_Sales_Managers</group>
            <group>Inside_Sales_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Idea</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>OD_Employee_ID__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>ISO_Extension__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Idea</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Idea Inside Sales</label>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Short_Title__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Market__c</columns>
        <columns>Region__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inside_Sales</fullName>
        <columns>CORE.USERS.PHONE</columns>
        <columns>ISO_Extension__c</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Inside Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Inside Sales</label>
        <sharedTo>
            <group>Admins</group>
            <group>Inside_Sales_Managers</group>
            <group>Inside_Sales_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lattice_user</fullName>
        <columns>CORE.USERS.PHONE</columns>
        <columns>ISO_Extension__c</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MANAGER</field>
            <operation>equals</operation>
            <value>travis hadley</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Lattice</label>
        <sharedTo>
            <group>Admins</group>
            <group>Inside_Sales_Managers</group>
            <group>Inside_Sales_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MISSING_ROLES_FOR_ACTIVE_USERS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>MISSING ROLES FOR ACTIVE USERS</label>
    </listViews>
    <listViews>
        <fullName>OMXUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>OMX Users</label>
    </listViews>
    <listViews>
        <fullName>Overlay_Test_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Overlay Sales</value>
        </filters>
        <label>Overlay Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PricingUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>pric</value>
        </filters>
        <label>Pricing Users</label>
    </listViews>
    <listViews>
        <fullName>Service_Consultants</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>Service</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Service Consultants</label>
    </listViews>
    <listViews>
        <fullName>SpringCMEos__SpringCM_Users</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpringCMEos__SpringCM_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SpringCM Users</label>
    </listViews>
    <listViews>
        <fullName>Support_Users_Support_Profile</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Short_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Support</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Support</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Pricing</value>
        </filters>
        <label>Support Users (Support Profile)</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Prevent_Address_Changes</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (  Street ) &amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorMessage>You do not have permission to change your Address. If it&apos;s incorrectly listed please update your address information in PeopleSoft to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Address_Changes_City</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (   City ) &amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorMessage>You do not have permission to change your Address. If it&apos;s incorrectly listed please update your address information in PeopleSoft to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Address_Changes_Country</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (   Country ) &amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorMessage>You do not have permission to change your Address. If it&apos;s incorrectly listed please update your address information in PeopleSoft to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Address_Changes_State</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (   State ) &amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorMessage>You do not have permission to change your Address. If it&apos;s incorrectly listed please update your address information in PeopleSoft to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Address_Changes_Zip</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED (   PostalCode ) &amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorMessage>You do not have permission to change your Address. If it&apos;s incorrectly listed please update your address information in PeopleSoft to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Division_Changes</fullName>
        <active>true</active>
        <description>Prevent users from changing their division (unless change is being done by admin user)</description>
        <errorConditionFormula>NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)) &amp;&amp; ISCHANGED(Division)</errorConditionFormula>
        <errorMessage>You do not have permission to change your division. If it&apos;s incorrectly listed please advise your manager to put in a support request to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Email_Changes</fullName>
        <active>false</active>
        <description>Prevent users from changing their email (unless change is being done by admin user)</description>
        <errorConditionFormula>NOT(CONTAINS( $Profile.Name , &quot;Admin&quot;)) &amp;&amp; ISCHANGED(Email)</errorConditionFormula>
        <errorMessage>You do not have permission to change your email.  If your email is incorrect please advise your manager to put in a support request to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_EmpID_Changes</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED( OD_Employee_ID__c ) || ISCHANGED( EmployeeNumber ) )&amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorMessage>You do not have permission to change your OD Employee ID.  If it&apos;s incorrectly listed please advise your manager to put in a support request to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Phone_Number_Changes</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(  Phone  ) &amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorMessage>You do not have permission to change your Phone Number.  If it&apos;s incorrectly listed please update your preferred phone number in PeopleSoft to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Title_Changes</fullName>
        <active>true</active>
        <description>Prevent users from changing their title (unless change is being done by admin user)</description>
        <errorConditionFormula>NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)) &amp;&amp; ISCHANGED(Title)</errorConditionFormula>
        <errorMessage>You do not have permission to change your title.  If your title is incorrect please advise your manager to put in a support request to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_activation_of_Chatter_users</fullName>
        <active>true</active>
        <errorConditionFormula>AND(UPPER(Profile.Name) = &quot;CHATTER ONLY USER&quot;, ISCHANGED(IsActive),  IsActive == TRUE)</errorConditionFormula>
        <errorMessage>Cannot activate users with a Chatter Only license</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_altEmail_Changes</fullName>
        <active>false</active>
        <description>Prevent users from changing their email (unless change is being done by admin user)</description>
        <errorConditionFormula>NOT(CONTAINS( $Profile.Name , &quot;Admin&quot;)) &amp;&amp; ISCHANGED(Alternate_Email__c)</errorConditionFormula>
        <errorMessage>You do not have permission to change your Alternate email.  If your email is incorrect please advise your manager to put in a support request to fix.</errorMessage>
    </validationRules>
</CustomObject>